refactoring home page for company

--- a/thesis/src/app/views/calendar/calendar.component.html
+++ b/thesis/src/app/views/calendar/calendar.component.html
@@ -1,4 +1,5 @@
-<div class="panel-header">
+
+<div class="panel-header" style="background-image: url('assets/img/bg19.jpg')">
   <div class="header text-center">
     <h2 class="title">Your Calendar</h2>
     <p class="category">
@@ -8,7 +9,7 @@
     </p>
   </div>
 </div>
-<div class="main-content">
+<div class="main-content" style="background-image: url('assets/img/bg19.jpg')">
   <div class="row">
     <div class="col-md-10 ml-auto mr-auto">
       <div class="card card-calendar">
