--- a/thesis/src/app/views/searchc/searchc.component.html
+++ b/thesis/src/app/views/searchc/searchc.component.html
@@ -83,11 +83,8 @@
                                         <p class="card-description">
                                             Think in the morning. Act in the noon. Eat in the evening. Sleep in the night......
                                         </p>
-                                        <div class="card-footer">
-                                            <a class="btn btn-icon btn-neutral btn-twitter"><i class="fa fa-twitter"></i></a>
-                                            <a class="btn btn-icon btn-neutral btn-facebook"><i class="fa fa-facebook-square"></i></a>
-                                            <a class="btn btn-icon btn-neutral btn-google"><i class="fa fa-google"></i></a>
-                                        </div>
+                                        <button type="button" class="btn btn-primary btn-link">Send Message</button> 
+                                        <button type="button" class="btn btn-primary btn-just-icon" ngbTooltip="add to favorites"><i class="fa fa-heart"></i></button>
                                     </div>
                                 </div>
                             </div>
@@ -110,71 +107,15 @@
                                         <p class="card-description">
                                             Love cures people - both the ones who give it and the ones who receive it...
                                         </p>
-                                        <div class="card-footer">
-                                            <a class="btn btn-icon btn-neutral btn-linkedin"><i class="fa fa-linkedin"></i></a>
-                                            <a class="btn btn-icon btn-neutral btn-facebook"><i class="fa fa-facebook-square"></i></a>
-                                            <a class="btn btn-icon btn-neutral btn-dribbble"><i class="fa fa-dribbble"></i></a>
-                                            <a class="btn btn-icon btn-neutral btn-google"><i class="fa fa-google"></i></a>
-                                        </div>
+                                        <button type="button" class="btn btn-primary btn-link">Send Message</button>
+                                        <button type="button" class="btn btn-primary btn-just-icon" ngbTooltip="add to favorites"><i class="fa fa-heart"></i></button>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-lg-7 ml-auto mr-auto">
-                        <div class="card card-profile card-plain">
-                            <div class="row">
-                                <div class="col-md-5">
-                                    <div class="card-image">
-                                        <a>
-                                            <img class="img img-raised rounded" src="assets/img/james.jpg" />
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-md-7">
-                                    <div class="card-body">
-                                        <h4 class="card-title">Daniel Carter</h4>
-                                        <h6 class="category">Aviation Inspector</h6>
-                                        <p class="card-description">
-                                            Keep your face always toward the sunshine - and shadows will fall behind you...
-                                        </p>
-                                        <div class="card-footer">
-                                            <a class="btn btn-icon btn-neutral btn-youtube"><i class="fa fa-youtube-play"></i></a>
-                                            <a class="btn btn-icon btn-neutral btn-twitter"><i class="fa fa-twitter"></i></a>
-                                            <a class="btn btn-icon btn-neutral btn-instagram"><i class="fa fa-instagram"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-6 col-lg-7 ml-auto mr-auto">
-                        <div class="card card-profile card-plain">
-                            <div class="row">
-                                <div class="col-md-5">
-                                    <div class="card-image">
-                                        <a>
-                                            <img class="img img-raised rounded" src="assets/img/michael.jpg" />
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-md-7">
-                                    <div class="card-body">
-                                        <h4 class="card-title">Dylan Wyatt</h4>
-                                        <h6 class="category">Conservation Scientist</h6>
-                                        <p class="card-description">
-                                            There is only one corner of the universe you can be certain of improving, and that's your own self...
-                                        </p>
-                                        <div class="card-footer">
-                                            <a class="btn btn-icon btn-neutral btn-linkedin"><i class="fa fa-linkedin"></i></a>
-                                            <a class="btn btn-icon btn-neutral btn-facebook"><i class="fa fa-facebook-square"></i></a>
-                                            <a class="btn btn-icon btn-neutral btn-google"><i class="fa fa-google"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                   
+                    
                 </div>
             </div>
         </div>
