--- a/thesis/src/app/views/searchu/searchu.component.html
+++ b/thesis/src/app/views/searchu/searchu.component.html
@@ -90,14 +90,14 @@
                 <!-- description -->
                 <div id='card-description' class="col-md-5 mr-auto">
                     <div class="info info-horizontal">
-                        <div class="icon icon-danger">
-                            <i class="now-ui-icons ui-2_chat-round"></i>
-                        </div>
+                       
                         <div    class="description">
-                            <h4 class="info-title">Listen to Social Conversations</h4>
+                            <h4 class="info-title">company name</h4>
                             <p class="description">
-                                Gain access to the demographics, psychographics, and location of unique people who talk about your brand.
+                               job description
                             </p>
+                            <button type="button" class="btn btn-primary btn-link">Apply</button>
+                            <button type="button" class="btn btn-primary btn-just-icon"ngbTooltip="follow"><i class="fa fa-heart"></i></button>
                         </div>
                     </div>
                     
