--- a/thesis/src/app/views/profil/profil.component.html
+++ b/thesis/src/app/views/profil/profil.component.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div>{{datas.email}}</div>
-    <h3 class="title">PROFILE</h3>
+    <h3 class="title">PROFIL</h3>
     <div>{{cv.adress}}</div>
     <div class="section">
         <div class="container">
