--- a/thesis/src/app/shared/navbar3/navbar3.component.html
+++ b/thesis/src/app/shared/navbar3/navbar3.component.html
@@ -13,7 +13,7 @@
                 <i class="now-ui-icons ui-1_zoom-bold"></i>
                 Search
               </a>
-             <a class="navbar-brand" [routerLink]="['/views/Calendar']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
+             <a class="navbar-brand" [routerLink]="['/views/calendar']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
                 <i class="now-ui-icons ui-1_calendar-60"></i>
                 Calender
              </a>
