landing page done

--- a/thesis/src/app/views/signup/signup-u.component.html
+++ b/thesis/src/app/views/signup/signup-u.component.html
@@ -5,15 +5,15 @@
     <div class="content">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 ml-auto mr-auto">
+                <div class="col-md-3 ml-auto mr-auto">
                     <div class="info info-horizontal">
                         <div class="icon icon-primary">
                             <i class="now-ui-icons media-2_sound-wave"></i>
                         </div>
                         <div class="description">
-                            <h5 class="info-title">Marketing</h5>
+                            <h5 class="info-title">Manage your NGFORCE account.</h5>
                             <p class="description">
-                                We've created the marketing campaign of the website. It was a very interesting collaboration.
+                             Fill your account with as much information as you can; Make your profil interesting.
                             </p>
                         </div>
                     </div>
@@ -22,9 +22,9 @@
                             <i class="now-ui-icons media-1_button-pause"></i>
                         </div>
                         <div class="description">
-                            <h5 class="info-title">Fully Coded in HTML5</h5>
+                            <h5 class="info-title">Applying process</h5>
                             <p class="description">
-                                We've developed the website with HTML5 and CSS3. The client has access to the code using GitHub.
+                               choose a position that suits your field of expertise.
                             </p>
                         </div>
                     </div>
@@ -33,9 +33,9 @@
                             <i class="now-ui-icons users_single-02"></i>
                         </div>
                         <div class="description">
-                            <h5 class="info-title">Built Audience</h5>
+                            <h5 class="info-title">Iterview</h5>
                             <p class="description">
-                                There is also a Fully ble CMS Admin Dashboard for this product.
+                                You are provided with a calender to help with the interviews time setting 
                             </p>
                         </div>
                     </div>
