--- a/thesis/src/app/views/landing/landing.component.html
+++ b/thesis/src/app/views/landing/landing.component.html
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto text-center">
                     <h2 class="title">Who we are?</h2>
-                    <h5 class="description">According to the National Oceanic and Atmospheric Administration, Ted, Scambos, NSIDClead scentist, puts the potentially record low maximum sea ice extent tihs year down to low ice extent in the Pacific and a late drop in ice extent in the Barents Sea.</h5>
+                    <h5 class="description">we are an online recruting  company we make an easy and speed dating between recruter and candidate  </h5>
                 </div>
             </div>
             <div class="separator separator-primary"></div>
@@ -21,10 +21,10 @@
                     <div class="col-md-6">
                         <!-- First image on the left side -->
                         <div class="image-container image-left" style="background-image: url('assets/img/bg38.jpg')">
-                            <p class="blockquote blockquote-primary">"Over the span of the satellite record, Arctic sea ice has been declining significantly, while sea ice in the Antarctichas increased very slightly"
+                            <p class="blockquote blockquote-primary">"It's recruting time ! Same benefits, half the efforts!"
                                 <br>
                                 <br>
-                                <small>-NOAA</small>
+                                <small>-NG.FORCE</small>
                             </p>
                         </div>
                         <!-- Second image on the left side of the article -->
@@ -33,13 +33,14 @@
                     <div class="col-md-5">
                         <!-- First image on the right side, above the article -->
                         <div class="image-container image-right" style="background-image: url('assets/img/bg39.jpg')"></div>
-                        <h3>So what does the new record for the lowest level of winter ice actually mean</h3>
-                        <p>The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer, and that process will continue whatever happens with climate change. Even if the Arctic continues to be one of the fastest-warming regions of the world, it will always be plunged into bitterly cold polar dark every winter. And year-by-year, for all kinds of natural reasons, there’s huge variety of the state of the ice.
+                        <h3>Are you looking for the newest and the fastest recruting records ?  </h3>
+                        <p>The recrutment approach is changing dynamically you no more need to waste much timer in order to hire or get hired. 
                         </p>
                         <p>
-                            For a start, it does not automatically follow that a record amount of ice will melt this summer. More important for determining the size of the annual thaw is the state of the weather as the midnight sun approaches and temperatures rise. But over the more than 30 years of satellite records, scientists have observed a clear pattern of decline, decade-by-decade.
+                           Our application will help you with the availability of a job and a candidate
                         </p>
-                        <p>The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer, and that process will continue whatever happens with climate change. Even if the Arctic continues to be one of the fastest-warming regions of the world, it will always be plunged into bitterly cold polar dark every winter. And year-by-year, for all kinds of natural reasons, there’s huge variety of the state of the ice.
+                        <p>
+                            Our platform will help you adapt and recruit more talented engineers,faster and at scale-turning a new challenge into one of your greatest opportunities. 
                         </p>
                     
                     </div>
