--- a/thesis/src/app/views/create-cv/create-cv.component.html
+++ b/thesis/src/app/views/create-cv/create-cv.component.html
@@ -11,208 +11,188 @@
         <div class="row">
           <div class="col-md-12 ml-auto mr-auto">
             <h2 class="title">Modify Your Profil</h2>
-            <form class="form" method="" action=""  (ngSubmit)="onSubmit1()">
+            <form class="form" method="" action="" (ngSubmit)="onSubmit1()">
               <div class="col-md-4">
                 <label>Email</label>
                 <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-               <div class="input-group-prepend">
-                 <span class="input-group-text"><i class="now-ui-icons users_circle-08"></i></span>
-               </div>
-               <input type="text" class="form-control"  name="email1" [(ngModel)]="email1" placeholder="Your Email..." (focus)="focus=true"
-               (blur)="focus=false">
-               </div>
-            
-               </div>
-            
-            <div class="col-md-4">
-              <label>Name</label>
-              <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-             <div class="input-group-prepend">
-               <span class="input-group-text"><i class="now-ui-icons users_circle-08"></i></span>
-             </div>
-             <input type="text" class="form-control"  name="name1" [(ngModel)]="name1" placeholder="Your Name..." (focus)="focus=true"
-               (blur)="focus=false">
-             </div>
-             
-             </div>
-          
-          <div class="col-md-4">
-            <label>Last Name</label>
-            <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-           <div class="input-group-prepend">
-             <span class="input-group-text"><i class="now-ui-icons users_circle-08"></i></span>
-           </div>
-           <input type="text" class="form-control"  name="lastname1" [(ngModel)]="lastname1" placeholder="Your Last Name..." (focus)="focus=true"
-             (blur)="focus=false">
-           </div>
-           
-           </div>
-           <div class="col-md-4">
-            <label>Passowrd</label>
-            <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-           <div class="input-group-prepend">
-             <span class="input-group-text"><i class="now-ui-icons users_circle-08"></i></span>
-           </div>
-           <input type="password" class="form-control"  name="password1" [(ngModel)]="password1" placeholder="Your Password..." (focus)="focus=true"
-             (blur)="focus=false">
-           </div>
-           
-           </div>
-           <input type="submit" class="btn btn-primary btn-raised btn-round" value="Modify">
-        
-            </form>
-            <h2 class="title">Build Your CV</h2>
-            <p class="description">Campany will be able to see your Profil To know about your skills
-              <br>
-              <br>
-            </p>
-            <form class="form" method="" action=""  (ngSubmit)="onSubmit()">
-          <div class="row" id="space">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="now-ui-icons users_circle-08"></i></span>
+                  </div>
+                  <input type="text" class="form-control" name="email1" [(ngModel)]="email1" placeholder="Your Email..."
+                    (focus)="focus=true" (blur)="focus=false">
+                </div>
+
+              </div>
+
               <div class="col-md-4">
                 <label>Name</label>
                 <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="now-ui-icons users_circle-08"></i></span>
                   </div>
-                  <input type="text" class="form-control"  name="name" [(ngModel)]="name" placeholder="Your Name..." (focus)="focus=true"
-                    (blur)="focus=false">
+                  <input type="text" class="form-control" name="name1" [(ngModel)]="name1" placeholder="Your Name..."
+                    (focus)="focus=true" (blur)="focus=false">
                 </div>
+
               </div>
 
               <div class="col-md-4">
-                 <label>Last Name</label>
-                 <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="now-ui-icons users_circle-08"></i></span>
-                </div>
-                <input type="text" class="form-control" name="lastname" [(ngModel)]="lastname" placeholder="Your Last Name..." (focus)="focus=true"
-                  (blur)="focus=false">
-                </div>
-             </div>
-             <div class="col-md-4">
-              <label>Age</label>
-              <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-             <div class="input-group-prepend">
-               <span class="input-group-text"><i class="now-ui-icons users_circle-08"></i></span>
-             </div>
-             <input type="number" class="form-control"  name="age" [(ngModel)]="age" placeholder="Your Age..." (focus)="focus=true"
-               (blur)="focus=false">
-             </div>
-          </div>
-        </div>
-
-          <div class="row" id="space">
-             <div class="col-md-6">
-                <label>Email address</label>
-                <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
+                <label>Last Name</label>
+                <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
                   <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="now-ui-icons ui-1_email-85"></i></span>
+                    <span class="input-group-text"><i class="now-ui-icons users_circle-08"></i></span>
                   </div>
-                  <input type="text" class="form-control" name="email" [(ngModel)]="email" placeholder="Email Here..." (focus)="focus1=true"
-                    (blur)="focus1=false">
+                  <input type="text" class="form-control" name="lastname1" [(ngModel)]="lastname1"
+                    placeholder="Your Last Name..." (focus)="focus=true" (blur)="focus=false">
+                </div>
+
               </div>
-             </div>
+              <div class="col-md-4">
+                <label>Passowrd</label>
+                <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="now-ui-icons users_circle-08"></i></span>
+                  </div>
+                  <input type="password" class="form-control" name="password1" [(ngModel)]="password1"
+                    placeholder="Your Password..." (focus)="focus=true" (blur)="focus=false">
+                </div>
 
-            
-            <div class="col-md-6">
-            <label>Phone</label>
-            <div class="input-group" [ngClass]="{'input-group-focus':focus2===true}">
-              <div class="input-group-prepend">
-                <span class="input-group-text"> <i class="now-ui-icons tech_mobile"></i></span>
               </div>
-              <input type="number" name="phone" [(ngModel)]="phone" placeholder="Number Here..." class="form-control" (focus)="focus2=true"
-                (blur)="focus2=false">
-            </div>
-          </div> 
-         </div>
+              <input type="submit" class="btn btn-primary btn-raised btn-round" value="Modify">
 
-         <div class="row" id="space">
-          <div class="col-md-12">
-             <label>Home Address</label>
-             <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
-               <div class="input-group-prepend">
-                 <span class="input-group-text"><i class="now-ui-icons ui-1_email-85"></i></span>
-               </div>
-               <input type="text" class="form-control" name="adress" [(ngModel)]="adress" placeholder="Adress Here..." (focus)="focus1=true"
-                 (blur)="focus1=false">
-           </div>
-          </div>
-      </div>
+            </form>
+            <h2 class="title">Build Your CV</h2>
+            <p class="description">Campany will be able to see your Profil To know about your skills
+              <br>
+              <br>
+            </p>
+            <form class="form" method="" action="" (ngSubmit)="onSubmit()">
+              <div class="row" id="space">
+                <div class="col-md-4">
+                  <label>Name</label>
+                  <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="now-ui-icons users_circle-08"></i></span>
+                    </div>
+                    <input type="text" class="form-control" name="name" [(ngModel)]="name" placeholder="Your Name..."
+                      (focus)="focus=true" (blur)="focus=false">
+                  </div>
+                </div>
 
-
-            <div class="form-group" id="space">
-              <label>Profil Presentation</label>
-              <input type="text" class="form-control"  name="descProfil" [(ngModel)]="descProfil" placeholder="Your Profesionnal Presentation..." (focus)="focus=true"
-              (blur)="focus=false">
-            </div>
-            
-            
-            
-            
-            <div class="row" id="space">
-              <div class="col-lg-6 col-md-5 col-sm-5">
-                <app-multiselect
-                [single]="true"
-                [text]="'Field'"
-                [dropdownList]="dropdownList2"
-                [selectedItems]="selectedItems2"
-                (itemSelect)="click($event)"
-                (itemDeSelect)="click($event)"
-                (selectAll)="console.log($event)"
-                (deSelectAll)="console.log($event)"
-                ></app-multiselect>
-              </div> 
+                <div class="col-md-4">
+                  <label>Last Name</label>
+                  <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="now-ui-icons users_circle-08"></i></span>
+                    </div>
+                    <input type="text" class="form-control" name="lastname" [(ngModel)]="lastname"
+                      placeholder="Your Last Name..." (focus)="focus=true" (blur)="focus=false">
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <label>Age</label>
+                  <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="now-ui-icons users_circle-08"></i></span>
+                    </div>
+                    <input type="number" class="form-control" name="age" [(ngModel)]="age" placeholder="Your Age..."
+                      (focus)="focus=true" (blur)="focus=false">
+                  </div>
+                </div>
               </div>
 
-            
+              <div class="row" id="space">
+                <div class="col-md-6">
+                  <label>Email address</label>
+                  <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="now-ui-icons ui-1_email-85"></i></span>
+                    </div>
+                    <input type="text" class="form-control" name="email" [(ngModel)]="email" placeholder="Email Here..."
+                      (focus)="focus1=true" (blur)="focus1=false">
+                  </div>
+                </div>
+
+
+                <div class="col-md-6">
+                  <label>Phone</label>
+                  <div class="input-group" [ngClass]="{'input-group-focus':focus2===true}">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"> <i class="now-ui-icons tech_mobile"></i></span>
+                    </div>
+                    <input type="number" name="phone" [(ngModel)]="phone" placeholder="Number Here..."
+                      class="form-control" (focus)="focus2=true" (blur)="focus2=false">
+                  </div>
+                </div>
+              </div>
+
+              <div class="row" id="space">
+                <div class="col-md-12">
+                  <label>Home Address</label>
+                  <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="now-ui-icons ui-1_email-85"></i></span>
+                    </div>
+                    <input type="text" class="form-control" name="adress" [(ngModel)]="adress"
+                      placeholder="Adress Here..." (focus)="focus1=true" (blur)="focus1=false">
+                  </div>
+                </div>
+              </div>
+
+
+              <div class="form-group" id="space">
+                <label>Profil Presentation</label>
+                <input type="text" class="form-control" name="descProfil" [(ngModel)]="descProfil"
+                  placeholder="Your Profesionnal Presentation..." (focus)="focus=true" (blur)="focus=false">
+              </div>
+
+
 
 
               <div class="row" id="space">
-              <div class="col-lg-6 col-md-5 col-sm-5">
-                <app-multiselect
-                [single]="true"
-                [text]="'Study Level'"
-                [dropdownList]="dropdownList"
-                [selectedItems]="selectedItems"
-                (itemSelect)="click1($event)"
-                (itemDeSelect)="click1($event)"
-                (selectAll)="console.log($event)"
-                (deSelectAll)="console.log($event)"
-                ></app-multiselect>
-              </div> 
+                <div class="col-lg-6 col-md-5 col-sm-5">
+                  <app-multiselect [single]="true" [text]="'Field'" [dropdownList]="dropdownList2"
+                    [selectedItems]="selectedItems2" (itemSelect)="click($event)" (itemDeSelect)="click($event)"
+                    (selectAll)="console.log($event)" (deSelectAll)="console.log($event)"></app-multiselect>
+                </div>
               </div>
 
-            <div class="form-group" id="space">
-              <label>Profesionnal Experience</label>
-              <input type="text" class="form-control"  name="ProfExp" [(ngModel)]="ProfExp" placeholder="Your Profesionnal Presentation..." (focus)="focus=true"
-              (blur)="focus=false">
-            </div>
+
+
 
               <div class="row" id="space">
-              <div class="col-lg-6 col-md-5 col-sm-5">
-                <app-multiselect
-                [single]="true"
-                [text]="'Years of experience'"
-                [dropdownList]="dropdownList1"
-                [selectedItems]="selectedItems1"
-                (itemSelect)="click2($event)"
-                (itemDeSelect)="click2($event)"
-                (selectAll)="test($event)"
-                (deSelectAll)="test($event)"
-                ></app-multiselect>
+                <div class="col-lg-6 col-md-5 col-sm-5">
+                  <app-multiselect [single]="true" [text]="'Study Level'" [dropdownList]="dropdownList"
+                    [selectedItems]="selectedItems" (itemSelect)="click1($event)" (itemDeSelect)="click1($event)"
+                    (selectAll)="console.log($event)" (deSelectAll)="console.log($event)"></app-multiselect>
+                </div>
               </div>
-              <div>
-                <app-image [isRound]="true"></app-image>
-            </div>
-            </div>
 
-            
+              <div class="form-group" id="space">
+                <label>Profesionnal Experience</label>
+                <input type="text" class="form-control" name="ProfExp" [(ngModel)]="ProfExp"
+                  placeholder="Your Profesionnal Presentation..." (focus)="focus=true" (blur)="focus=false">
+              </div>
+
+              <div class="row" id="space">
+                <div class="col-lg-6 col-md-5 col-sm-5">
+                  <app-multiselect [single]="true" [text]="'Years of experience'" [dropdownList]="dropdownList1"
+                    [selectedItems]="selectedItems1" (itemSelect)="click2($event)" (itemDeSelect)="click2($event)"
+                    (selectAll)="test($event)" (deSelectAll)="test($event)"></app-multiselect>
+                </div>
+                <div>
+                  <app-image [isRound]="true"></app-image>
+                </div>
+
+              </div>
 
 
-            <div class="submit text-center">
-              <input type="submit" class="btn btn-primary btn-raised btn-round" value="Submit" />
-            </div>
-</form>
+
+
+              <div class="submit text-center">
+                <input type="submit" class="btn btn-primary btn-raised btn-round" value="Submit" />
+              </div>
+            </form>
           </div>
         </div>
       </div>
