--- a/thesis/src/app/views/profil/profil.component.html
+++ b/thesis/src/app/views/profil/profil.component.html
@@ -11,9 +11,9 @@
             <p class="category tex">{{datas.lastname}}</p>
         </div>
     </div>
-    <div>{{datas.email}}</div>
+    <!-- <div>{{datas.email}}</div>
     <h3 class="title">PROFILE</h3>
-    <div>{{cv.adress}}</div>
+    <div>{{cv.adress}}</div> -->
     <div class="section">
         <div class="container">
             <h3 class="title">CONTACT INFORMATION</h3>
