--- a/thesis/src/app/elements/elements.component.html
+++ b/thesis/src/app/elements/elements.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div class="page-header clear-filter" filter-color="orange">
-      <div class="page-header-image" data-parallax="true" style="background-image: ;">
+      <div class="page-header-image" data-parallax="true" style="background-image: ">
       </div>
       <div class="rellax-header rellax-header-sky" data-rellax-speed="-8">
           <div class="page-header-image" style="background-image: url('assets/img/presentation-page/nuk-pro-back-sky.jpg')">
