last steps for mvp

--- a/thesis/src/app/views/home/home.component.html
+++ b/thesis/src/app/views/home/home.component.html
@@ -26,6 +26,7 @@
                         
                         <div class="card-footer">
                             <h4 class="card-title"> {{data.OfferTitle}}</h4>
+                            <p class="category">{{data.TypeOfContract}}</p>
                             <p class="category">{{data.Salary}}</p>
                             <p class="category">{{data.YearsOfExperience}}</p>
                         </div>
