--- a/thesis/src/app/shared/navbar2/navbar2.component.html
+++ b/thesis/src/app/shared/navbar2/navbar2.component.html
@@ -31,11 +31,13 @@
             </button>
         </div>
         <div class="collapse navbar-collapse" data-nav-image="assets/img/blurred-image-1.jpg" data-color="orange">
+         <ul class="navbar-nav ml-auto">
          <li  class="nav-item">
             <a class="nav-link btn btn-primary" (click)="logout()" [routerLink]="['/views/login']">
                <p>LOGOUT</p>
                </a>
             </li>
+            </ul>
         </div>
     </div>
 </nav>
