--- a/thesis/src/app/shared/navbar3/navbar3.component.html
+++ b/thesis/src/app/shared/navbar3/navbar3.component.html
@@ -7,7 +7,7 @@
              </a>
              <a class="navbar-brand" [routerLink]="['/views/createcv']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
                 <i class="now-ui-icons users_circle-08"></i>
-                    Create Cv
+                    Create/Modify Cv
                  </a>
              <a class="navbar-brand" [routerLink]="['/views/searchu']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
                 <i class="now-ui-icons ui-1_zoom-bold"></i>
@@ -32,12 +32,15 @@
             </button>
         </div>
         <div class="collapse navbar-collapse" data-nav-image="assets/img/blurred-image-1.jpg" data-color="orange">
-           
-        </div>
-        <li  class="nav-item">
+         <ul class="navbar-nav ml-auto">
+         <li  class="nav-item">
             <a class="nav-link btn btn-primary" (click)="logout()" [routerLink]="['/views/login']">
                <p>LOGOUT</p>
                </a>
             </li>
+            </ul>
+        </div>
+      
+       
     </div>
 </nav>
