--- a/thesis/src/app/views/searchu/searchu.component.html
+++ b/thesis/src/app/views/searchu/searchu.component.html
@@ -93,7 +93,7 @@
                         <div    class="description">
                             <h4 class="info-title">{{data.OfferTitle}}</h4>
                             <p class="description">
-                              {{data.salary}}
+                              {{data.Salary}}
                             </p>
                             <p class="description">
                                 {{data.YearsOfExperience}}
