--- a/thesis/src/app/views/calendar/calendar.component.html
+++ b/thesis/src/app/views/calendar/calendar.component.html
@@ -1,4 +1,5 @@
-
+<app-navbar3 *ngIf="bolean"></app-navbar3>
+<app-navbar2 *ngIf="!bolean"></app-navbar2>
 <div class="panel-header" style="background-image: url('assets/img/bg19.jpg')">
   <div class="header text-center">
     <h2 class="title">Your Calendar</h2>
