--- a/thesis/src/app/views/home/home.component.html
+++ b/thesis/src/app/views/home/home.component.html
@@ -15,7 +15,7 @@
                     <div class="card card-testimonial">
                         <div class="card-avatar">
                             <a href="#pablo">
-                                <img class="img img-raised" src="assets/img/michael.jpg">
+                                <img class="img img-raised" src="assets/images/noPic.svg">
                             </a>
                         </div>
                         <div class="card-body">
