--- a/thesis/src/app/views/searchc/searchc.component.html
+++ b/thesis/src/app/views/searchc/searchc.component.html
@@ -80,7 +80,7 @@
                                 <div class="col-md-5">
                                     <div class="card-image">
                                         <a >
-                                            <img class="img img-raised rounded" src="assets/img/olivia.jpg" />
+                                            <img class="img img-raised rounded" src="assets/images/noPic.svg" />
                                         </a>
                                     </div>
                                 </div>
