--- a/thesis/src/app/shared/navbar2/navbar2.component.html
+++ b/thesis/src/app/shared/navbar2/navbar2.component.html
@@ -16,7 +16,7 @@
                 <i class="now-ui-icons ui-1_calendar-60"></i>
                 Calender
              </a>
-             <a class="navbar-brand" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
+             <a class="navbar-brand" [routerLink]="['/views/chat']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
                 <i class="now-ui-icons ui-2_chat-round"></i>
                 Chat
              </a>
