--- a/thesis/src/app/views/searchc/searchc.component.html
+++ b/thesis/src/app/views/searchc/searchc.component.html
@@ -33,13 +33,13 @@
             <button class="btn btn-default dropdown-toggle" ngbDropdownToggle>Field         {{ field}}</button>
             <div ngbDropdownMenu>
             <a class="dropdown-item"  (click)="click($event)"  >Marketing</a>
-            <a class="dropdown-item" (click)="click($event)" >IT</a>
+            <a class="dropdown-item" (click)="click($event)" >Software Solution</a>
             <a class="dropdown-item" (click)="click($event)" >Design</a>
             <a class="dropdown-item" (click)="click($event)" ></a>
             </div>
         </div>
         <div ngbDropdown class="dropdown" placement="bottom-right">
-            <button class="btn btn-default dropdown-toggle" ngbDropdownToggle>Education level        studylevel</button>
+            <button class="btn btn-default dropdown-toggle" ngbDropdownToggle>Education level        {{studylevel}}</button>
             <div ngbDropdownMenu>
             <a class="dropdown-item" (click)="click1($event)">Post bac</a>
             <a class="dropdown-item" (click)="click1($event)">baccalaureate</a>
