--- a/thesis/src/app/views/calendar/calendar.component.html
+++ b/thesis/src/app/views/calendar/calendar.component.html
@@ -17,6 +17,24 @@
         <div class="card-body">
           <div id='calendar'></div>
           <!-- <div id='destination-calendar'></div> -->
+          <div *ngFor="let cal of calendardetails">
+           <form class="form" method="" action="" (ngSubmit)="onSubmit(cal._id)">
+            <div class="form-group">
+              
+              
+              
+              </div>
+             
+            <div>{{cal.title}}</div>
+            <input class="form-control" type="title" name="title" [(ngModel)]="title" placeholder="Event Title" id="input-field">
+           <div>{{cal.start}}</div>
+           <input class="form-control"  type="time" name="time" [(ngModel)]="time" placeholder="Time start" id="input-field1">
+           <div>{{cal.color}}</div>
+           <select name="color" [(ngModel)]="color"  id="input-field2" > <option value="red">Red</option><option value="blue">Blue</option><option value="green">Green</option><option value="pink">Pink</option></select>' 
+           <input type="submit" class="btn btn-primary btn-raised btn-round" value="Modify" />
+           <input  (click)="delete(cal._id)"class="btn btn-primary btn-raised btn-round" value="Delete" />
+          </form>
+          </div>
         </div>
       </div>
     </div>
