--- a/thesis/src/app/views/searchu/searchu.component.html
+++ b/thesis/src/app/views/searchu/searchu.component.html
@@ -72,7 +72,7 @@
         <div class="separator-line separator-primary"></div>
        <!--  -->
        <div class="projects-5">
-        <div class="container" *ngFor="let data of datas">
+        <div class="container" *ngFor="let data of datas; let i = index">
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto text-center">
                     <h2 class="title">{{data.CompanyName}}</h2>
@@ -102,7 +102,8 @@
                                 {{data.TypeOfContract}}
                               </p>
                             <button type="button" class="btn btn-primary btn-link">Apply</button>
-                            <button type="button" class="btn btn-primary btn-just-icon"ngbTooltip="follow"><i class="fa fa-heart"></i></button>
+                            <button *ngIf="!follows[i]" type="button" class="btn btn-primary btn-just-icon" (click)="follow(data,i)" ngbTooltip="follow"><i class="fa fa-heart"></i></button>
+                            <button *ngIf="follows[i]" type="button" class="btn btn-primary btn-just-icon"   (click)="unfollow(data,i)" ngbTooltip="unfollow">unfollow</button>
                         </div>
                     </div>
                     
