--- a/thesis/src/app/chat/sidebar/sidebar.component.html
+++ b/thesis/src/app/chat/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
       </div>
     </div>
   
-    <div id="sidebarContent">
+    <div id="sidebarContent" *ngIf='ready'>
       <!-- <div id="noConversations">All chats are archived</div> -->
   
       <div
@@ -35,8 +35,8 @@
         </div>
         <div class="content">
           <div class="conversationHeader">
-            <div class="name">{{ conversation.name }}</div>
-            <div class="time">{{ conversation.time }}</div>
+            <div class="name">{{ conversation._id.name }}</div>
+            <div class="time">{{ conversation.last }}</div>
           </div>
           <div class="message">
             <img
@@ -47,7 +47,7 @@
               *ngIf="conversation.latestMessageRead"
               src="../../assets/images/doubleTickBlue.svg"
             />
-            {{ conversation.latestMessage }}
+            <!-- {{ conversation.latestMessage }} -->
           </div>
         </div>
       </div>
